Fixed apply on mobile
- make info sessions wrap
- maybe also fixed link issue (navigating to cuad.info/page), we'll see

--- a/src/pages/ApplyPage.css
+++ b/src/pages/ApplyPage.css
@@ -168,6 +168,7 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .session {
